# SimpleStereotactic

./: Example_Instructions.md  INSTALLATION.md  LICENSE  README.md  ToDo.md
PigFrame_NonProprietary_Extension/: CMakeLists.txt
PigFrame_NonProprietary_Extension/PigFrame/: CMakeLists.txt  PigFrame.py
PigFrame_NonProprietary_Extension/PigFrame/Resources/Models/: AnnotationRuler.acsv  Arc.h5  ArcNCollar.mtl  Atlas_AC_PC.fcsv  Atlas_Reg.h5  Atlas_Trans.h5  Collar.h5  F.fcsv  Frame_Template.vtk  Frame_Template_wf.mtl  LinearTransform_3.h5  Model.vtk  Model_2.vtk  NewPigFrameRed.mrml  PigBrain.ctbl  PigBrain_1.ctbl  Scan_AC_PC.fcsv  Target.vtk  Target_X.h5  Target_Y.h5  Target_Z.h5  Targets.fcsv
Slicer_Extension/: CMakeLists.txt
Slicer_Extension/SimpleFrame/: .project  CMakeLists.txt  SimpleFrame.py
Slicer_Extension/SimpleFrame/Resources/Models/: ArcNCollar.vtk  Atlas_AC_PC.mrk.json  Atlas_Reg.h5  Atlas_Trans.h5  Collar.h5  Frame_Template.vtk  Frame_Template_wf.vtk  PigBrain.ctbl  Scan_AC_PC.mrk.json  SimpleScene.mrml  Target.vtk  Target_X.h5  Target_Y.h5  Target_Z.h5  Targets.mrk.json
Slicer_Extension/kopf_frame/: CMakeLists.txt  kopf_frame.py
Slicer_Extension/kopf_frame/Resources/Models/: kopf_frame.mrb
Slicer_Extension/simple_frame/: SimpleFrame.py
Slicer_Extension/simple_frame/Resources/Models/: SimpleScene.mrb
